--- a/style2.scss
+++ b/style2.scss
@@ -421,11 +421,6 @@ $colorBrend: #f16d7f;
 
 .navigation{
 
-    &__box{
-        // padding-top: 19px;
-        // padding-bottom: 22px;
-    }
-
     &__ul{
         display: flex;
         gap: 40px;
@@ -455,7 +450,6 @@ $colorBrend: #f16d7f;
         position: absolute;
         top: 30px;   
         z-index: 1;
-
         display:none;
     }
 
@@ -543,150 +537,360 @@ $colorBrend: #f16d7f;
 
     
 }
-      
-.offer{
-    background-color: #e8e8e8;
+
+.arrival{
+    padding-top: 65px;
+    padding-bottom: 65px;
+    background-color: #f8f3f4;
+    background-size: cover;
+    background-blend-mode: overlay;
     display: flex;
-    align-items: center;
-    position: relative;
+    align-items: center; 
+    justify-content: space-between;
 
-    &__background{
-        width: 100%;
-    }
-
-
-    &__content{
-        display: flex;
-        gap: 12px;
-        align-items: center; 
-        margin-top: 22px;  
-        position: absolute; 
-        margin-left: 0px;
-    }
-
-    &__stick{
-        display: block;
-        width: 12px;
-        height: 94px;
-        background-color:$colorBrend;
-       
-    }
-
-    &__text-big{
+    &__title{
         font-family: Lato;
-        font-size: 60px;
-        line-height: 1.2;
+        font-size: 24px;
+        line-height: 20px;
         font-weight: 900;
-        letter-spacing: 0.025em;
-        color: #222222;
-    }
-
-    &__text-small{
-        font-family: Lato;
-        line-height: 1.2;
-        font-weight: 900;
-        letter-spacing: 0.025em;
-        color: #222222;
-        font-size: 40px;
-    }
-
-    &_colour{
+        text-transform: uppercase;
         color: $colorBrend;
     }
 }
 
+.breadcrumbs{
 
-.categories{
-    padding-top: 98px;
-    padding-bottom: 100px;
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: 560px 560px;
-    grid-template-rows: 261px 261px 261px;
-    
-   
-    &__block{
-        position: relative;
+    &__ul{
+        list-style-type: none;
+        display: flex;
+       
+    }
+
+    &__list:not(:last-child):after{
+        content: '/';
+        padding-left: 3px;
+        padding-right: 3px;
+        font-family: Lato;
+        font-size: 14px;
+        line-height: 20px;
+        font-weight: 300;
+        text-transform: uppercase;
+        color: #636363;
+    }
+
+    &__list:last-child .breadcrumbs__link{
+        font-family: Lato;
+        font-size: 14px;
+        line-height: 20px;
+        text-transform: uppercase;
+        font-weight: 700;
+        color:$colorBrend;
     }
 
     &__link{
+        font-family: Lato;
+        font-size: 14px;
+        line-height: 20px;
+        font-weight: 300;
+        text-transform: uppercase;
+        color: #636363;
+    }
+
+}
+
+.slider{
+    display: flex;
+    justify-content: center;
+    position: relative;
+    background-image: url(./img_single_page/background.png);
+    background-size: cover;
+    border: 1px solid #eaeaea;
+   
+
+    &__photo{
         display: flex;
+        justify-content: center;  
+    }
+   
+
+    &__img{
+        margin-top: 11px;
+        margin-bottom: 42px;
     }
 
-    &_first{
-        grid-row: 1/3;
-        grid-column: 1/2;
+    &__select{
+        background-color: #ffffff;
+        border: 1px solid #eaeaea;
+        margin-top: 691px;
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
     }
 
-    &_second{
-        grid-row: 3/4;
-        grid-column: 1/2;
+    &__description{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 73px;
+        max-width: 642px;
+        border-bottom: 1px solid #eaeaea;
+        margin-left: 250px;
+        margin-right: 250px;
+    }
+
+    &__categry{
+        font-family: Lato;
+        font-size: 14px;
+        line-height: 24px;
+        font-weight: 700;
+        color: #f16d7f;
+        margin-bottom: 14px;
     }
 
     &__title{
-        position: absolute;
-        padding: 16px 18px;
-        margin-top: 26px;
-        background-color: #ffffff;
+        margin-top: 17px;
+        margin-bottom: 67px;
+
+        font-family: Lato;
+        font-size: 18px;
+        line-height: 24px;
+        font-weight: 900;
+        text-transform: uppercase;
+        color: #4d4d4d;
     }
 
     &__text{
         font-family: Lato;
-        font-size: 18px;
-        line-height: 1.2;
-        font-weight: 900;
-        text-transform: uppercase;
-        letter-spacing: 0.025em;
-        color: #222222;
+        font-size: 14px;
+        line-height: 24px;
+        font-weight: 300;
+        color: #5e5e5e;
+        text-align: center;
+        margin-bottom: 28px;
+    }
+
+    &__inform{
+        display: flex;
+        gap: 44px;
+        margin-bottom: 37px;
+    }
+
+    &__data{
+        font-family: Lato;
+        font-size: 14px;
+        line-height: 24px;
+        font-weight: 700;
+        color: #b9b9b9;
     }
 
     &__color{
-        font-size: 30px;
-        color: $colorBrend;
-    }
-
-    &__block:hover &__photo {
-        box-shadow: 1px 1px 5px gray;
-        transform: scale(1.02);
-        transition: all 0.5s ease-in-out;
-    }
-    
-    &__block:hover  &__title{
-        transform: scale(1.02);
-        transition: all 0.5s ease-in-out;
-        }
-}
-
-.future{
-    padding-bottom: 113px;
-    
-
-
-    &__heading{
-        display: flex;
-        gap: 16px;
-        flex-direction: column;
-        align-items: center;
-        margin-bottom: 59px;
-    }
-
-    &__heading-titl{
-        font-family: Lato;
-        font-size: 30px;
-        font-weight: 700;
-        letter-spacing: 0.025em;
-        color: #222222;
-    }
-
-    &__heading-text{
         font-family: Lato;
         font-size: 14px;
-        font-weight: 400;
-        letter-spacing: 0.025em;
-        color: #9f9f9f;
+        line-height: 24px;
+        font-weight: 700;
+        color: #2f2f2f;
     }
 
-    &__main{
+    &__price{
+        font-family: Lato;
+        font-size: 24px;
+        line-height: 24px;
+        font-weight: 700;
+        color: #ef5b70;
+        margin-bottom: 43px;
+    }
+
+    &__filter{
+        margin-top: 63px;
+        margin-bottom: 28px;
+        display: flex;
+        gap: 53px;
+    }
+
+    &__filter-title{
+        font-family: Lato;
+        font-size: 14px;
+        line-height: 24px;
+        font-weight: 700;
+        color: #2f2f2f;
+        margin-bottom: 16px;
+    }
+
+    &__details{
+        display: flex;
+        background-color: #ffffff;
+        border: 1px solid #eaeaea;
+        width: 144px;
+    }
+
+    &__details{
+        &[open] .slider__summary-text{
+            color: $colorBrend
+        }
+
+        &[open] .slider__summary-icon{
+            fill: $colorBrend
+        }
+
+        &[open] .slider__summary-size{
+            color: $colorBrend
+        }
+    }
+
+
+    &__summary{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin: 9px 15px
+    }
+
+    &__left{
+        display: flex;
+        gap: 11px;
+        align-items: center;
+        margin-right: 55px;
+    }
+
+    &__square{
+        display: block;
+        width: 12px;
+        height: 12px;
+        background-color: #ef5b70;
+    }
+
+    
+
+    &__summary-text{
+        font-family: Lato;
+        font-size: 13px;
+        font-weight: 400;
+        color: #bcbcbc;
+        
+    }
+
+    &__summary-icon{
+        font-family: 'Font Awesome';
+        font-size: 14px;
+        line-height: 23px;
+        font-weight: 400;
+        fill: #bcbcbc;
+    }
+
+    &__summary-size{
+        font-family: Lato;
+        font-size: 13px;
+        font-weight: 400;
+        color: #bcbcbc;
+        margin-right: 75px;
+    }
+
+
+    &__field{
+        width: 127px;
+        height: 33px;
+        display: flex;
+        padding-left: 15px;
+        background-color: #ffffff;
+        border: 1px solid #eaeaea;
+
+        font-family: Lato;
+        font-size: 14px;
+        line-height: 24px;
+        font-weight: 400;
+        color: #bcbcbc;
+    }
+
+    &__button{
+        display: flex;
+        // gap: 15px;
+        justify-content: center;
+        margin-bottom: 122px;
+    }
+            
+    &__link{
+        display: flex;
+        align-items: center;
+        gap: 15px;
+        padding: 22px 206px;
+        text-decoration: none;
+        background-color: #ffffff;
+        border: 1px solid #ef5b70;
+    }
+
+    &__icon{
+        fill:#ef5b70;
+    }
+    
+    &__button-text{
+        font-family: Lato;
+        font-size: 16px;
+        line-height: 1.2;
+        font-weight: 700;
+        color: #ef5b70;
+        
+    }
+
+    &__link:hover{
+        background:  #ef5b70;
+        transition: all 0.5s;
+    }
+    
+
+    &__link:hover .slider__icon{
+        fill: #FFFFFF;
+        transition: all 0.5s;
+    
+    }
+
+    &__link:hover .slider__button-text{
+        color: #FFFFFF;
+        transition: all 0.5s;
+    }
+         
+}
+
+.stick{
+    display: flex;
+    justify-content: center;
+
+    &__full{
+        width: 147px;
+        height: 1px;
+        background-color: #eaeaea;
+        border: 1px solid #eaeaea;
+        position: relative;
+    }
+
+    &__center{
+        width: 63px;
+        height: 3px;
+        background-color: #ef5b70;
+        position: absolute;
+    }
+}
+
+
+
+.future{
+
+    padding-top: 860px;
+    padding-bottom: 73px;
+
+    &__heading{
+        font-family: Lato;
+        font-size: 24px;
+        line-height: 35px;
+        font-weight: 900;
+        text-transform: uppercase;
+        color: #4d4d4d;
+        margin-bottom: 72px;
+        text-align: center;
+    }
+
+     &__main{
         display: grid;
         gap: 30px;
         grid-template-columns: repeat(auto-fit, 261px);
@@ -694,13 +898,24 @@ $colorBrend: #f16d7f;
 
     &__block{
         position: relative;
+   
     }
 
-    &__block:hover{
+    &__picture{
+        width: 261px;
+        height: 280px;
+        background-color: #e9e9e9;
+        display: flex;
+        justify-content: center;
+    }
+
+   
+
+     &__block:hover{
         box-shadow: 8px 5px 8px 0px rgba(0, 0, 0, 0.15);
     }
 
-    &__block:hover &__photo{
+    &__block:hover &__picture{
         filter: brightness(30%);
     }
 
@@ -710,21 +925,16 @@ $colorBrend: #f16d7f;
 
     &__link{
         display: flex;
-        gap: 19px;
+        gap: 18px;
         flex-direction: column;
     }
 
-    &__photo{
-        width: 100%;
-        height: 100%;
-    }
-
-    &__block-text{
+     &__block-text{
         display: flex;
         gap: 17px;
         flex-direction: column;
-        margin-left: 14px;
-        margin-bottom: 30px;
+        margin-left: 15px;
+        margin-bottom: 21px;
     }
 
     &__block-title{
@@ -773,117 +983,9 @@ $colorBrend: #f16d7f;
         font-weight: 700;
         color: #ffffff;
     }
-
-    &__button{
-        display: flex;
-        justify-content: center;
-        margin-top: 30px;
-    }    
-
-    &__push{
-        width: 212px;
-        height: 48px;
-        background-color: #f16d7f;
-        border: none;
-        display: flex;
-        gap: 9px;
-        justify-content: center;
-        align-items: center;
-    }
-
-    &__push-text{
-        font-family: Lato;
-        font-size: 16px;
-        font-weight: 700;
-        letter-spacing: 0.025em;
-        color: #ffffff;
-    }
-
-    &__push-img{
-        fill: #ffffff;
-        font-size: 15px;
-        font-weight: 400;
-    }
-
-    &__push:hover {
-        background:#ffffff;
-        border: 1px solid #e6e6e6;
-        transition: all 0.3s;
-    }
-
-    &__push:hover &__push-text {
-        color:$colorBrend;
-        transition: all 0.3s;
-    }
-
-    &__push:hover &__push-img {
-       fill:$colorBrend;
-       transition: all 0.3s;
-    }
-    
 }
 
-.guaranties{
-    padding-bottom: 97px;
-    display: flex;
-
-    &__photo{
-        height: 529px;
-    }
-
-    &__articles{
-        min-width: 373px;
-        height: 529px;
-        background-color: #222224;
-    }
-
-    &__block{
-        margin-left: 36px;
-        display: flex;
-        gap: 33px;
-        align-items: flex-start;
-        padding-top: 48px;
-        margin-bottom: 2px;
-        transition: all 2s;   
-    }
-
-    &__text{
-        width: 219px;
-        display: flex;
-        gap: 17px;
-        flex-direction: column;
-    }
-
-    &__title{
-        font-family: Lato;
-        font-size: 20px;
-        font-weight: 700;
-        letter-spacing: 0.025em;
-        color: #fbfbfb;
-    }
-
-    &__description{
-        font-family: Lato;
-        font-size: 14px;
-        line-height: 24px;
-        font-weight: 300;
-        letter-spacing: 0.025em;
-        color: #fbfbfb;
-    }
-
-    &__block:hover &__img {
-        filter: drop-shadow(3px 3px 3px #f16d7f);
-        // transform: scale(1.02);
-        transition: all 0.5s;   
-    }
-    
-    &__block:hover &__title {
-        filter: drop-shadow(3px 3px 3px #ffff);
-        // transform: scale(1.02);  
-        transition: all 0.5s;   
-    }
-}
-
+   
 .subscription {
     background-image: url(./img2/background-subscription.png);
     height: 438px;
@@ -1124,7 +1226,6 @@ $colorBrend: #f16d7f;
         fill: #ffffff;
     }
 }
+    
 
-
-
-
+   
