--- a/style3.scss
+++ b/style3.scss
@@ -57,7 +57,8 @@ $colorBrend: #f16d7f;
         }
 
         &[open] .header__searche-img{
-            fill: $colorBrend
+            fill: $colorBrend;
+            transform: rotate(180deg);
         }
     }
 
@@ -257,11 +258,12 @@ $colorBrend: #f16d7f;
 
     .header__right-details{
         &[open] .header__right-text{
-            color: $colorBrend
+            color: $colorBrend;
         }
 
         &[open] .header__right-img{
-            fill: $colorBrend
+            fill: $colorBrend;
+            transform: rotate(180deg);
         }
 
         &[open] .header__right-button{
@@ -421,11 +423,6 @@ $colorBrend: #f16d7f;
 
 .navigation{
 
-    &__box{
-        // padding-top: 19px;
-        // padding-bottom: 22px;
-    }
-
     &__ul{
         display: flex;
         gap: 40px;
@@ -455,7 +452,6 @@ $colorBrend: #f16d7f;
         position: absolute;
         top: 30px;   
         z-index: 1;
-
         display:none;
     }
 
@@ -543,147 +539,313 @@ $colorBrend: #f16d7f;
 
     
 }
-      
-.offer{
-    background-color: #e8e8e8;
+
+.arrival{
+    padding-top: 65px;
+    padding-bottom: 65px;
+    background-color: #f8f3f4;
+    background-size: cover;
+    background-blend-mode: overlay;
     display: flex;
-    align-items: center;
-    position: relative;
+    align-items: center; 
+    justify-content: space-between;
 
-    &__background{
-        width: 100%;
+    &__title{
+        font-family: Lato;
+        font-size: 24px;
+        line-height: 20px;
+        font-weight: 900;
+        text-transform: uppercase;
+        color: $colorBrend;
     }
+}
 
+.breadcrumbs{
 
-    &__content{
+    &__ul{
+        list-style-type: none;
         display: flex;
-        gap: 12px;
-        align-items: center; 
-        margin-top: 22px;  
-        position: absolute; 
-        margin-left: 0px;
-    }
-
-    &__stick{
-        display: block;
-        width: 12px;
-        height: 94px;
-        background-color:$colorBrend;
        
     }
 
-    &__text-big{
+    &__list:not(:last-child):after{
+        content: '/';
+        padding-left: 3px;
+        padding-right: 3px;
         font-family: Lato;
-        font-size: 60px;
-        line-height: 1.2;
-        font-weight: 900;
-        letter-spacing: 0.025em;
-        color: #222222;
+        font-size: 14px;
+        line-height: 20px;
+        font-weight: 300;
+        text-transform: uppercase;
+        color: #636363;
     }
 
-    &__text-small{
+    &__list:last-child .breadcrumbs__link{
         font-family: Lato;
-        line-height: 1.2;
-        font-weight: 900;
-        letter-spacing: 0.025em;
-        color: #222222;
-        font-size: 40px;
-    }
-
-    &_colour{
-        color: $colorBrend;
-    }
-}
-
-
-.categories{
-    padding-top: 98px;
-    padding-bottom: 100px;
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: 560px 560px;
-    grid-template-rows: 261px 261px 261px;
-    
-   
-    &__block{
-        position: relative;
+        font-size: 14px;
+        line-height: 20px;
+        text-transform: uppercase;
+        font-weight: 700;
+        color:$colorBrend;
     }
 
     &__link{
-        display: flex;
-    }
-
-    &_first{
-        grid-row: 1/3;
-        grid-column: 1/2;
-    }
-
-    &_second{
-        grid-row: 3/4;
-        grid-column: 1/2;
-    }
-
-    &__title{
-        position: absolute;
-        padding: 16px 18px;
-        margin-top: 26px;
-        background-color: #ffffff;
-    }
-
-    &__text{
         font-family: Lato;
-        font-size: 18px;
-        line-height: 1.2;
-        font-weight: 900;
+        font-size: 14px;
+        line-height: 20px;
+        font-weight: 300;
         text-transform: uppercase;
-        letter-spacing: 0.025em;
-        color: #222222;
+        color: #636363;
     }
 
-    &__color{
-        font-size: 30px;
+}
+
+.product{
+    padding-top: 59px;
+    display: flex;
+    gap: 49px;
+
+    &__left{
+        display: flex;
+        flex-direction: column;
+        gap: 18px;
+    }
+
+
+    &__details-left{
+        width: 243px;
+    }
+
+    &__details-left{
+
+        &[open]  .product__left-img{
+           transform: rotate(180deg);
+           fill: #ef5b70;
+        }
+
+        &[open]  .product__left-text{
+            color: #ef5b70;
+         }
+
+    }
+
+    &__left-summary{
+        display: flex;
+        border-bottom: 1px solid #ebebeb;
+        align-items: center;
+        justify-content: space-between;
+
+    }
+
+    &__left-decor{
+        display: flex;
+        align-items: center;
+    }
+
+    &__left-stick{
+        width: 5px;
+        height: 37px;
+        background-color: #ef5b70;
+        display: block;
+    }
+
+    &__left-text{
+        font-family: Lato;
+        font-size: 14px;
+        line-height: 20px;
+        font-weight: 700;
+        text-transform: uppercase;
+        color: #6f6e6e;
+        margin-left: 11px;
+    }
+
+    &__left-img{
+        font-size: 14px;
+        line-height: 19px;
+        font-weight: 400;
+        text-transform: uppercase;
+        fill: #6f6e6e;
+    }
+
+    &__link-box{
+        padding: 22px 13px 41px 13px;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    &__left-link{
+        font-family: Lato;
+        font-size: 14px;
+        line-height: 33px;
+        font-weight: 400;
+        color: #6f6e6e;
+    }
+
+    &__left-link:hover{
         color: $colorBrend;
     }
 
-    &__block:hover &__photo {
-        box-shadow: 1px 1px 5px gray;
-        transform: scale(1.02);
-        transition: all 0.5s ease-in-out;
-    }
-    
-    &__block:hover  &__title{
-        transform: scale(1.02);
-        transition: all 0.5s ease-in-out;
-        }
-}
-
-.future{
-    padding-bottom: 113px;
-    
-
-
-    &__heading{
+    .product__choice{
         display: flex;
-        gap: 16px;
-        flex-direction: column;
-        align-items: center;
-        margin-bottom: 59px;
     }
 
-    &__heading-titl{
-        font-family: Lato;
-        font-size: 30px;
-        font-weight: 700;
-        letter-spacing: 0.025em;
-        color: #222222;
+    .product__trend{
+        width: 176px;
     }
 
-    &__heading-text{
+    .product__trend-title{
         font-family: Lato;
         font-size: 14px;
+        line-height: 20px;
+        font-weight: 700;
+        text-transform: uppercase;
+        color: #6f6e6e;
+        margin-bottom: 25px;
+    }
+
+    .product__trend-ul{
+        list-style-type: none;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+
+
+    &__trend-list:not(:last-child):after{
+        content: '|';
+        padding-left: 3px;
+        padding-right: 3px;
+        color: #dfdfdf;
+    }
+
+    &__trend-link{
+        font-family: Lato;
+        font-size: 14px;
+        line-height: 26px;
         font-weight: 400;
-        letter-spacing: 0.025em;
-        color: #9f9f9f;
+        color: #6f6e6e;
+    }
+
+    .product__size{
+        width: 238px;
+        margin-left: 114px;
+        margin-right: 58px;
+    }
+
+    .product__size-title{
+        font-family: Lato;
+        font-size: 14px;
+        line-height: 20px;
+        font-weight: 700;
+        text-transform: uppercase;
+        color: #6f6e6e;
+        margin-bottom: 25px;
+    }
+
+    .product__size-box{
+        display: flex;
+        gap: 20px;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
+
+    .product__size-check{
+        display: flex;
+        gap: 9px;
+        align-items: center;
+        font-family: Lato;
+        font-size: 14px;
+        // line-height: 20px;
+        font-weight: 400;
+        text-transform: uppercase;
+        color: #6f6e6e;
+    }
+
+    .product__price{
+        width: 262px;
+    }
+
+    .product__price-title{
+        font-family: Lato;
+        font-size: 14px;
+        line-height: 20px;
+        font-weight: 700;
+        text-transform: uppercase;
+        color: #6f6e6e;
+        margin-bottom: 25px;
+    }
+
+    .product__range{
+        display: flex;
+        gap: 21px;
+        flex-direction: column;
+    }
+
+    .product__input{
+        width: 262px;
+    }
+
+    .product__range-num{
+        display: flex;
+        justify-content: space-between;
+       
+    }
+
+    .product__range-text{
+        font-family: Lato;
+        font-size: 14px;
+        line-height: 26px;
+        font-weight: 400;
+        color: #6f6e6e;
+    }
+
+    .product__sort{
+        background-color: #f3f3f3;
+        display: flex;
+        gap: 10px;
+        padding: 10px 9px 10px;
+        margin-top: 41px;
+        margin-bottom: 48px;
+    }
+
+    .product__button{
+        display: flex;
+    }
+
+    .product__button-info{
+        font-family: Lato;
+        font-size: 14px;
+        // line-height: 26px;
+        font-weight: 400;
+        color: #6f6e6e;
+
+        background-color: #ffffff;
+        border: 1px solid #ebebeb;
+        padding: 10px 13px 8px 8px;
+    }
+
+    .product__button-details{
+        background-color: #ffffff;
+        border: 1px solid #ebebeb;
+    }
+
+    .product__button-summary{
+        padding: 10px;
+        display: flex;
+        gap: 20px;
+    }
+
+    .product__button-text{
+        font-family: Lato;
+        font-size: 14px;
+        // line-height: 26px;
+        font-weight: 400;
+        color: #6f6e6e;
+    }
+
+    .product__button-img{
+        fill: #6f6e6e;
     }
 
     &__main{
@@ -700,7 +862,7 @@ $colorBrend: #f16d7f;
         box-shadow: 8px 5px 8px 0px rgba(0, 0, 0, 0.15);
     }
 
-    &__block:hover &__photo{
+    &__block:hover &__block-photo{
         filter: brightness(30%);
     }
 
@@ -708,13 +870,13 @@ $colorBrend: #f16d7f;
        display: flex;
     }
 
-    &__link{
+    &__block-link{
         display: flex;
         gap: 19px;
         flex-direction: column;
     }
 
-    &__photo{
+    &__block-photo{
         width: 100%;
         height: 100%;
     }
@@ -773,358 +935,4 @@ $colorBrend: #f16d7f;
         font-weight: 700;
         color: #ffffff;
     }
-
-    &__button{
-        display: flex;
-        justify-content: center;
-        margin-top: 30px;
-    }    
-
-    &__push{
-        width: 212px;
-        height: 48px;
-        background-color: #f16d7f;
-        border: none;
-        display: flex;
-        gap: 9px;
-        justify-content: center;
-        align-items: center;
-    }
-
-    &__push-text{
-        font-family: Lato;
-        font-size: 16px;
-        font-weight: 700;
-        letter-spacing: 0.025em;
-        color: #ffffff;
-    }
-
-    &__push-img{
-        fill: #ffffff;
-        font-size: 15px;
-        font-weight: 400;
-    }
-
-    &__push:hover {
-        background:#ffffff;
-        border: 1px solid #e6e6e6;
-        transition: all 0.3s;
-    }
-
-    &__push:hover &__push-text {
-        color:$colorBrend;
-        transition: all 0.3s;
-    }
-
-    &__push:hover &__push-img {
-       fill:$colorBrend;
-       transition: all 0.3s;
-    }
-    
 }
-
-.guaranties{
-    padding-bottom: 97px;
-    display: flex;
-
-    &__photo{
-        height: 529px;
-    }
-
-    &__articles{
-        min-width: 373px;
-        height: 529px;
-        background-color: #222224;
-    }
-
-    &__block{
-        margin-left: 36px;
-        display: flex;
-        gap: 33px;
-        align-items: flex-start;
-        padding-top: 48px;
-        margin-bottom: 2px;
-        transition: all 2s;   
-    }
-
-    &__text{
-        width: 219px;
-        display: flex;
-        gap: 17px;
-        flex-direction: column;
-    }
-
-    &__title{
-        font-family: Lato;
-        font-size: 20px;
-        font-weight: 700;
-        letter-spacing: 0.025em;
-        color: #fbfbfb;
-    }
-
-    &__description{
-        font-family: Lato;
-        font-size: 14px;
-        line-height: 24px;
-        font-weight: 300;
-        letter-spacing: 0.025em;
-        color: #fbfbfb;
-    }
-
-    &__block:hover &__img {
-        filter: drop-shadow(3px 3px 3px #f16d7f);
-        // transform: scale(1.02);
-        transition: all 0.5s;   
-    }
-    
-    &__block:hover &__title {
-        filter: drop-shadow(3px 3px 3px #ffff);
-        // transform: scale(1.02);  
-        transition: all 0.5s;   
-    }
-}
-
-.subscription {
-    background-image: url(./img2/background-subscription.png);
-    height: 438px;
-    background-color: rgba(242,242,242,0.5);
-    background-size: cover;
-    background-blend-mode: overlay;
-    background-position: bottom;
-    display: flex;
-    gap: 165px;
-    align-items: center; 
-    
-    &__figure{
-        display: flex;
-        gap: 28px;
-    }
-
-    &__photo{
-        width: 83px;
-        height: 83px;
-    }
-
-    &__title{
-        display: flex;
-        gap: 19px;
-        flex-direction: column;
-    }
-
-    &__italic{
-        max-width: 386px;
-        font-family: Lato;
-        font-size: 16px;
-        line-height: 26px;
-        font-weight: 400;
-        font-style: italic;
-        letter-spacing: 0.025em;
-        color: #222224;
-    }
-
-    &__data{
-        font-family: Lato;
-        font-size: 12px;
-        line-height: 14px;
-        font-weight: 300;
-        color: #222224;
-    }
-
-    &__name{
-        font-family: Lato;
-        font-size: 16px;
-        line-height: 26px;
-        font-weight: 700;
-        letter-spacing: 0.025em;
-        color: $colorBrend;
-    }
-
-   
-    &__right{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    &__right-title{
-        font-family: Lato;
-        font-size: 24px;
-        line-height: 54px;
-        font-weight: 400;
-        text-transform: uppercase;
-        letter-spacing: 0.025em;
-        color: #222224;
-    }
-
-    &__right-text{
-        font-family: Lato;
-        font-weight: 400;
-        letter-spacing: 0.025em;
-        color: #222224;
-        font-size: 14px;
-        line-height: 24px;
-        text-transform: none;
-        margin-bottom: 35px;
-    }
-
-    &__right-input{
-        display: flex;
-    }
-
-    &__field{
-        width: 282px;
-        height: 52px;
-        background-color: #e1e1e1;
-        border: none;
-        border-top-left-radius: 23px;
-        border-bottom-left-radius:23px;
-        padding-left: 28px;
-
-        opacity: 0.67;
-        font-family: Lato;
-        font-size: 14px;
-        line-height: 54px;
-        font-weight: 400;
-        letter-spacing: 0.025em;
-        color: #222224;
-    }
-
-    &__button{
-        width: 104px;
-        height: 52px;
-        background-color: $colorBrend;
-        border: none;
-        border-top-right-radius: 23px;
-        border-bottom-right-radius: 23px;
-
-        font-family: Lato;
-        font-size: 14px;
-        line-height: 54px;
-        font-weight: 400;
-        letter-spacing: 0.025em;
-        color: #ffffff;
-
-        transition: all 0.5s;
-    }
-        
-
-    &__button:hover {
-        background:#ffffff;
-        color:$colorBrend;
-        border: 1px solid #e6e6e6;
-       
-    }
-
-}
-    
-.inform{
-    padding-top: 109px;
-    padding-bottom: 89px;
-    display: flex;
-    gap: 64px;
-
-    &__description{
-        display: flex;
-        flex-direction: column;
-        gap: 29px;
-    }
-
-    &__text{
-        max-width: 427px;
-        display: flex;
-        flex-direction: column;
-        gap: 30px;
-
-        font-family: Lato;
-        font-size: 14px;
-        line-height: 24px;
-        font-weight: 300;
-        letter-spacing: 0.025em;
-        color: #898989;
-    }
-
-    &__subdivision{
-        display: flex;
-        gap: 24px;
-    }
-
-    &__block{
-        width: 200px;
-        display: flex;
-        flex-direction: column;
-        gap: 45px;
-    }
-
-    &__title{
-        font-family: Lato;
-        font-size: 18px;
-        line-height: 26px;
-        font-weight: 700;
-        letter-spacing: 0.025em;
-        color: #f16d7f;
-    }
-
-    &__menu{
-        display: flex;
-        flex-direction: column;
-        gap: 30px;    
-    }
-
-    &__link{
-        font-family: Lato;
-        font-size: 16px;
-        font-weight: 400;
-        letter-spacing: 0.025em;
-        color: #898989;
-    }
-
-    &__link:hover {
-        color: $colorBrend;
-    }
-}
-
-.footer{
-    padding-top: 24px;
-    padding-bottom: 23px;
-    background-color: #e6e6e6;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    
-
-    &__text{
-        font-family: Lato;
-        font-size: 16px;
-        line-height: 42px;
-        font-weight: 400;
-        letter-spacing: 0.025em;
-        color: #7a7a7a;
-    }
-
-    &__icons{
-        display: flex;
-        gap: 8px;
-    }
-
-    &__block{
-        width: 32px;
-        height: 32px;
-        background: #ffffff;;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        transition: all 0.5s;
-    }
-
-    &__block:hover {
-        background: $colorBrend;
-    }
-    
-    &__block:hover svg path {
-        fill: #ffffff;
-    }
-}
-
-
-
-
